# lab2_fp

./: .gitignore  .ocamlformat  README.md  dune-project  prefix_tree_dict.opam  Беля_ФП_2.odt
.github/workflows/: ci.yml
_build/: .db  .digest-db  log
_build/default/: META.prefix_tree_dict  README.md  prefix_tree_dict.dune-package  prefix_tree_dict.install
_build/default/lib/: prefix_tree_dict.cma  prefix_tree_dict.cmxa  prefix_tree_dict.cmxs  prefix_tree_dict.ml
_build/default/lib/.merlin-conf/: lib-prefix_tree_dict
_build/default/lib/.prefix_tree_dict.objs/byte/: prefix_tree_dict.cmi  prefix_tree_dict.cmo  prefix_tree_dict.cmt  prefix_tree_dict.cmti
_build/default/lib/.prefix_tree_dict.objs/native/: prefix_tree_dict.cmx
_build/default/test/: oUnit-Prefix Tree Dict тесты.cache  test_prefix_tree_dict.ml
_build/default/test/.merlin-conf/: exe-test_prefix_tree_dict
_build/default/test/.test_prefix_tree_dict.eobjs/byte/: dune__exe__Test_prefix_tree_dict.cmi  dune__exe__Test_prefix_tree_dict.cmti
_build/default/test/.test_prefix_tree_dict.eobjs/native/: dune__exe__Test_prefix_tree_dict.cmx
_build/install/default/lib/prefix_tree_dict/: META  dune-package  opam  prefix_tree_dict.cma  prefix_tree_dict.cmi  prefix_tree_dict.cmt  prefix_tree_dict.cmti  prefix_tree_dict.cmx  prefix_tree_dict.cmxa  prefix_tree_dict.cmxs  prefix_tree_dict.ml  prefix_tree_dict.mli
lib/: dune  prefix_tree_dict.ml  prefix_tree_dict.mli
test/: dune  test_prefix_tree_dict.ml
